--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,12 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
+    padding: 20px;
   }
 
-.item {
+.item a {
     color:white;
+}
+.item a.active {
+    color: gold;
 }
