--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,9 +1,17 @@
 .item {
-   color:#E89383;
-   text-shadow: 1px 1px 2px black;
+    color: #E89383;
+    background-color: aquamarine;
+    margin: 1vw 0.5vw 1vw 0.5vw;
+    text-shadow: 1px 1px 2px black;
+    border: solid darkblue 6px;
+    border-radius: 10px;
+    border-top: 0px;
+    border-bottom: 0px;
+    padding: 5px;
 }
+
 .item img {
-  width: 50px;
-  height: 50px;
-  border-radius: 30px
+    width: 50px;
+    height: 50px;
+    border-radius: 30px
 }
