added map for messages, dialogs and posts

--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,22 @@
     margin: 0 auto;
     justify-content: center;
     display: grid;
-    width: 1300px;
+    width: 75%;
 
     grid-template-areas: "h h" "n c";
     grid-template-rows: 90px 1fr;
-    grid-template-columns: 2fr 11fr;
+    grid-template-columns: 2fr 14fr;
     grid-gap: 0.9vw;
 }
 
 .app-wrapper-content {
     grid-area: c;
-    background-color: #4AA19E;
+    font-weight: 400;
+    font-size: 18px;
+    color: white;
+    background-color: #314A61;
     border-radius: 10px 10px 1px 1px;
+    border: solid #1F3041 5px;
+    border-bottom: none;
 }
 
