--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,6 +6,9 @@
 
 .item a {
     color:white;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 17px;
 }
 .item a.active {
     color: gold;
