--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,13 +1,16 @@
 .item {
     color: #E89383;
-    background-color: aquamarine;
-    margin: 1vw 0.5vw 1vw 0.5vw;
+    background-color: #1F3041;
+    margin: 1vw 0vw 1vw 0vw;
     text-shadow: 1px 1px 2px black;
-    border: solid darkblue 6px;
+    border: solid #151E27 6px;
     border-radius: 10px;
     border-top: 0px;
     border-bottom: 0px;
     padding: 5px;
+    font-weight: 500;
+    font-size: 17px;
+    vertical-align: middle;
 }
 
 .item img {
