--- a/src/components/Dialogs/Messages/Message/Message.module.css
+++ b/src/components/Dialogs/Messages/Message/Message.module.css
@@ -5,7 +5,7 @@
     margin-bottom: 7px;
     text-align: left;
     border-radius: 1vw;
-    min-width: 50px;
+    min-width:30px;
 }
 
 .myMessage {
@@ -15,5 +15,11 @@
     margin-bottom: 7px;
     text-align: right;
     border-radius: 1vw;
-    min-width: 50px;
+    min-width:30px;
+    max-width: 8em; /* блок занимает ширину родителя, max-width её ограничивает */
+    margin-left: auto;
+    margin-right: 0.4em;
+}
+.myMessage div {
+
 }
