--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
     background-color: #314A61;
     border-radius: 2px 2px 1px 1px;
     border: solid #7B8997 1px;
-    border-bottom: none;
+    /*border-bottom: none;*/
+    margin-bottom: 3vw;
 }
 
