--- a/src/components/Dialogs/Messages/Messages.module.css
+++ b/src/components/Dialogs/Messages/Messages.module.css
@@ -1,30 +1,39 @@
 .chat {
     padding: 1vw;
+    padding-bottom: 0;
+    min-height: 30vw;
 }
 
 .messageCreator {
-    position: absolute;
     width: 100%;
+    height: 100%;
     bottom: 0;
     margin-right: 4vw;
+    border: 2px solid #4C89C6;
+    border-bottom: none;
 }
 .messageCreator textarea {
     width: 80%;
+    height: 100%;
+    padding-left: 5px;
+    margin: 0.2vw;
     resize: none;
     border-radius: 5px;
 }
 .messageCreator button {
+    position:absolute;
     background-color: #1F3041;
     color:white;
     border: none;
-    border-radius: 25%;
-    height: 90%;
-    width: 4vw;
-    position: absolute;
-    padding: 5px;
+    border-radius: 2vw;
+    height: 2.1vw;
+    width: 2.5vw;
     text-align: center;
-    margin-left: 0.5vw;
+    margin: 0.2vw;
+    ;
 }
 .messages {
-
+    height: 27.8vw;
+    overflow:auto;
 }
+
