--- a/src/components/Dialogs/Messages/Messages.module.css
+++ b/src/components/Dialogs/Messages/Messages.module.css
@@ -5,29 +5,32 @@
 }
 
 .messageCreator {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 100%;
     bottom: 0;
     margin-right: 4vw;
     border: 2px solid #4C89C6;
+    border-radius: 4px;
     border-bottom: none;
 }
 .messageCreator textarea {
-    width: 80%;
-    height: 100%;
+    width: 90%;
+    height: 45px;
     padding-left: 5px;
     margin: 0.2vw;
     resize: none;
     border-radius: 5px;
 }
 .messageCreator button {
-    position:absolute;
     background-color: #1F3041;
     color:white;
+    font-weight: 600;
     border: none;
-    border-radius: 2vw;
-    height: 2.1vw;
-    width: 2.5vw;
+    border-radius: 0.5vw;
+    height: 2.5vw;
+    width: 10%;
     text-align: center;
     margin: 0.2vw;
     ;
