--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -2,9 +2,35 @@
     padding: 0vw 0.5vw 0vw 0.5vw;
     width: 100%
 }
-.postingBlock textarea {
+.postingBlock h3 {
+    text-align: center;
+}
+
+.postCreator {
+    display: flex;
+    align-items: center;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    text-align: center;
+}
+.postCreator textarea {
+    height: 3vw;
+    border-radius: 1vw;
     resize: none;
-    width:75%
+    width:85%;
+    padding: 5px;
+}
+.postCreator button {
+    width: 10%;
+    font-weight: 600;
+    background-color: #1F3041;
+    color:white;
+    border: none;
+    border-radius: 0.5vw;
+    height: 2.5vw;
+    width: 15%;
+    text-align: center;
+    margin: 0.2vw;
 }
 
 .posts {
