--- a/src/components/Profile/PMedia/FriendsBanner/FriendsBanner.module.css
+++ b/src/components/Profile/PMedia/FriendsBanner/FriendsBanner.module.css
@@ -1,9 +1,21 @@
 .icons {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 .icons div{
     text-align: center;
+}
+
+.icon {
+
+}
+.icon img {
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;
+    object-fit: cover;
 }
 
 .friendsShortcut {
