added react-redux, context(to index.js) connect and copying(deep and shallow) state in reducers => better perfomance and more readable code

--- a/src/components/Dialogs/Messages/Message/Message.module.css
+++ b/src/components/Dialogs/Messages/Message/Message.module.css
@@ -8,6 +8,8 @@
     min-width:30px;
     max-width: 20vw;
     word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 .myMessage {
@@ -22,5 +24,7 @@
     min-width:30px;
     max-width: 20vw; /* блок занимает ширину родителя, max-width её ограничивает */
     word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
