--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .nav {
     grid-area: n;
     background-color: burlywood;
-    padding: 20px;
+    padding: .8em;
     border-radius: 2px;
     max-height: 30vw;
     position: sticky;
@@ -13,7 +13,7 @@
     color:white;
     text-decoration: none;
     font-weight: 500;
-    font-size: 17px;
+    font-size: 1.2em;
     /*background-color: #D1872D;*/
 }
 .item a.active {
