--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     width: 75%;
 
     grid-template-areas: "h h" "n c";
-    grid-template-rows: 90px 1fr;
+    grid-template-rows: 4em 1fr;
     grid-template-columns: 2fr 15.2fr;
     grid-gap: 0.4vw;
 }
