--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
     background-color: burlywood;
     padding: .8em;
     border-radius: 2px;
-    max-height: 30vw;
+    height: 30vw;
     position: sticky;
     top: 0;
     margin-bottom: 3vw;
