--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,4 @@
 .postingBlock {
-    padding: 0vw 0.5vw 0vw 0.5vw;
     width: 100%
 }
 .postingBlock h3 {
@@ -14,14 +13,16 @@
     text-align: center;
 }
 .postCreator textarea {
-    height: 3vw;
+    height: 2.7vw;
     border-radius: 1vw;
     resize: none;
-    width:85%;
+    width:95%;
     padding: 5px;
 }
+.postCreator div {
+    width: 85%;
+}
 .postCreator button {
-    width: 10%;
     font-weight: 600;
     background-color: #1F3041;
     color:white;
