--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -13,14 +13,15 @@
     text-align: center;
 }
 .postCreator textarea {
+    display: block;
+    width: 95%;
     height: 2.7vw;
     border-radius: 1vw;
     resize: none;
-    width:95%;
     padding: 5px;
 }
 .postCreator div {
-    width: 85%;
+    width: 100%;
 }
 .postCreator button {
     font-weight: 600;
