--- a/src/components/common/Forms/FormsControls.module.css
+++ b/src/components/common/Forms/FormsControls.module.css
@@ -5,15 +5,21 @@
     width: 100%;
 }
 
-.error span{
+.formControl.error input,
+.formControl.error textarea {
+    width: 100%;
+    border: solid red 2px;
+}
+
+.error span,
+.formSummaryError {
     border: solid red 1px;
     border-radius: 5px;
     background-color: lightpink;
     padding: 0.2em;
     font-size: 0.7em;
+
 }
-.formControl.error input,
-.formControl.error textarea {
-    width: 100%;
-    border: solid red 2px;
+.formSummaryError {
+    width: 13.5%
 }
