--- a/src/components/Dialogs/Messages/MessageItem/Message.module.css
+++ b/src/components/Dialogs/Messages/MessageItem/Message.module.css
@@ -8,8 +8,7 @@
     min-width:30px;
     max-width: 20vw;
     word-wrap: break-word;
-    overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .myMessage {
@@ -24,7 +23,6 @@
     min-width:30px;
     max-width: 20vw; /* блок занимает ширину родителя, max-width её ограничивает */
     word-wrap: break-word;
-    overflow-wrap: break-word;
-    word-break: break-all;
+    word-break: break-word;
 }
 
