--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -35,7 +35,7 @@
     transition: all .3s ease;
 }
 
-.myPfp img:hover {
+.inputFileLabel img:hover {
     filter: hue-rotate(-20deg) blur(2px) brightness(57%);
 }
 
@@ -80,7 +80,7 @@
     cursor: pointer;
 }
 .inputFileButton img:hover {
-    background-color: darkslategrey;
+    background-color: forestgreen;
 }
 
 .inputFile + .inputFileLabel {
@@ -105,29 +105,6 @@
     text-shadow: 1px 1px 2px black;
 }
 
-.infoAbout {
-    padding: 0vw 1vw;
-    position: relative;
-    text-align: left;
-    top: -4vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    /*overflow:auto;*/
-}
 
-.settingsBtn {
-    margin-left: -0.15vw;
-}
 
-.settingsBtn img{
-    width: 1.4vw;
-    height: 1.4vw;
-    cursor: pointer;
-    transition: all .3s ease;
-}
 
-.settingsBtn img:hover {
-    width: 1.5vw;
-    height: 1.5vw;
-    transform: rotate(45deg);
-}
