--- a/src/components/common/IconLink/IconLink.module.css
+++ b/src/components/common/IconLink/IconLink.module.css
@@ -1,7 +1,7 @@
 .linkBtn img {
     width: 2.2vw;
     height: 2.2vw;
-    border-radius: 1vw;
+    border-radius: 1.3vw;
     margin: 0vw 0.15vw;
     margin-top: 0.5vw;
     cursor: pointer;
@@ -9,6 +9,5 @@
 }
 
 .linkBtn img:hover {
-
-    filter: hue-rotate(-10deg) brightness(80%);
+    filter: hue-rotate(-10deg) invert(20%) brightness(80%) ;
 }
