--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -11,6 +11,7 @@
     padding-left: 1vw;
     padding-right: 1vw;
     text-align: center;
+    color: black
 }
 .postCreator textarea {
     display: block;
