--- a/src/components/Profile/ProfileInfo/ProfileAboutForm/ProfileAboutForm.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileAboutForm/ProfileAboutForm.module.css
@@ -4,7 +4,8 @@
     padding: 0vw 0.5vw;
     position: relative;
     text-align: left;
-    top: -4.5vw
+    top: -4.5vw;
+    color: black
 }
 
 .aboutForm div {
