Chat page, WebSocket. Login page is now using Formik. Following button on profile page

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,3 +13,11 @@
 .item a.active {
     color: midnightblue;
 }
+
+.ad {
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+    border: 3px solid darkslategrey;
+}
