--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -35,6 +35,12 @@
 }
 
 .postText {
+    word-break: break-word;
+    word-wrap: break-word;
     vertical-align: middle;
+}
+
+.deleteButton{
+    text-align: right;
 }
 
