--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,3 +1,7 @@
+.myPosts {
+    padding: 0vw 1.5vw;
+}
+
 .postingBlock {
     width: 100%
 }
@@ -8,8 +12,6 @@
 .postCreator {
     display: flex;
     align-items: center;
-    padding-left: 1vw;
-    padding-right: 1vw;
     text-align: center;
     color: black
 }
@@ -37,5 +39,5 @@
 }
 
 .posts {
-    padding: 0.5vw;
+    padding: 0.5vw 0vw;
 }
