--- a/src/components/Profile/PMedia/PMedia.module.css
+++ b/src/components/Profile/PMedia/PMedia.module.css
@@ -1,7 +1,7 @@
-
 .media {
+    width: 19.99vw;
     padding: 10px;
-    background-color: #4AA19E;
+    background-color: #1F3041;
     border-radius: 10px 10px 10px 10px;
     margin-bottom: 1vw;
 }
