--- a/src/components/Dialogs/Messages/MessageForm/MessageForm.module.css
+++ b/src/components/Dialogs/Messages/MessageForm/MessageForm.module.css
@@ -15,23 +15,23 @@
     text-align: center;
     margin-right: 1vw;
 }
-.messageCreator textarea {
+.textField {
     width: 100%;
     height: 45px;
     padding-left: 5px;
     margin: 0.2vw;
     resize: none;
     border-radius: 5px;
+    color: black
 }
-.messageCreator button {
+.submitButton {
     background-color: #1F3041;
     color:white;
     font-weight: 600;
     border: none;
     border-radius: 0.5vw;
     height: 2.5vw;
-    width: 10%;
+    width: 40%;
     text-align: center;
-    margin: 0.2vw;
-;
+    margin: 0.2vw 1vw;
 }
