--- a/src/components/common/Ads/Ad.module.css
+++ b/src/components/common/Ads/Ad.module.css
@@ -1,11 +1,23 @@
 .ad {
     text-align: center;
-    overflow: auto;
+    width: 100%;
+    height: 100%;
 }
 
-.ad img{
-    height: 85%;
-    width: 85%;
+.image {
+    margin-left: auto;
+    margin-right: auto;
+    height: 83%;
+    width: 83%;
+}
+
+.image img {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+.info {
+    margin: 1px
 }
