--- a/src/components/Users/UsersSearchForm/UsersSearchForm.module.css
+++ b/src/components/Users/UsersSearchForm/UsersSearchForm.module.css
@@ -12,9 +12,10 @@
 }
 
 .usersSearch {
-    color: black;
+    width: 10vw;
     height: 2vw;
     border-radius: 4px;
+    border: 1px solid darkgrey;
 }
 
 .usersSwitch {
