--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,14 +1,14 @@
 .item {
     color: white;
-    background-color: #1F3041;
+    background-color: #141414;
     margin: 1vw 0vw 1vw 0vw;
     text-shadow: 1px 1px 2px black;
-    border: solid #151E27 6px;
+    border: solid #1f1f1f 6px;
     border-radius: 10px;
     border-top: 0px;
     border-bottom: 0px;
     padding: 5px;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.1rem;
 }
 
