--- a/src/components/Users/UserItem/UserItem.module.css
+++ b/src/components/Users/UserItem/UserItem.module.css
@@ -1,6 +1,6 @@
 .user {
-    background-color: #1F3041;
-    border:solid #151E27 1px;
+    background-color: #141414;
+    border:solid gray 1px;
     margin: -1px 0.5vw;
     padding: .5vw;
     border-radius: 0.5vw;
