Chat autoscroll, memory optimization. Chat pending, error, reconnect handling

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,10 @@
 .app-wrapper {
-    margin: 0 auto;
-    justify-content: center;
-    display: grid;
-    width: 75%;
-
-    grid-template-areas: "h h" "n c";
-    grid-template-rows: 4em 1fr;
-    grid-template-columns: 2fr 15.2fr;
-    grid-gap: 0.4vw;
+    background-color: #314A61;
 }
 
 .app-wrapper-content {
-    grid-area: c;
-    font-weight: 400;
-    font-size: 18px;
     color: white;
     background-color: #314A61;
-    border-radius: 2px 2px 1px 1px;
-    border: solid #7B8997 1px;
     /*border-bottom: none;*/
-    margin-bottom: 3vw;
 }
 
