Profile picture preview

--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -6,8 +6,8 @@
 }
 
 .dialog  {
-    background-color: #1F3041;
-    border:solid #151E27 2px;
+    background-color: #000000;
+    border:solid #1f1f1f 2px;
     border-left: none;
     border-right: none;
     padding-top: 4px;
