--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -13,12 +13,14 @@
 }
 
 .img {
+    width: 3vw;
+    height: 3vw;
     display: inline-block;
 }
 .img img {
-    width: 3em;
-    height: 3em;
-    border-radius: 30px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
     object-fit: cover;
 }
 
