--- a/src/components/Profile/ProfileInfo/ProfilePicture/ProfilePicture.module.css
+++ b/src/components/Profile/ProfileInfo/ProfilePicture/ProfilePicture.module.css
@@ -1,3 +1,8 @@
+.inputFileLabel img {
+    display: inline-block;
+    padding: 0.1vw;
+    overflow: hidden;
+}
 .inputFileLabel img:hover {
     filter: hue-rotate(-20deg) blur(2px) brightness(57%);
 }
@@ -21,22 +26,87 @@
     z-index: -1;
 }
 
-.inputFileButton img {
-    width:1vw;
-    height:1vw;
+.inputFileButton {
+    width:1.5vw;
+    height:1.5vw;
     border-radius: 0.25vw;
     object-fit: cover;
     object-position: center;
-    background-color: cornflowerblue;
+    transition: 0.3s ease all;
 }
 
 .inputFile + .inputFileButton {
     cursor: pointer;
 }
-.inputFileButton img:hover {
-    background-color: forestgreen;
+.inputFileButton:hover {
+    color: forestgreen;
 }
 
 .inputFile + .inputFileLabel {
     cursor: pointer;
+}
+
+.pfp {
+    display: inline-block;
+    padding: 0.1vw;
+    overflow: hidden;
+    transition: 0.3s ease all;
+}
+.pfp:hover {
+    filter: hue-rotate(-20deg) brightness(57%);
+}
+
+.pfpPreview {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+.pfpPreview img{
+    margin: auto;
+    display: block;
+    width: 80%;
+    height: 80%;
+    max-width: 700px;
+    border-radius: 0;
+}
+
+.pfpPreview img {
+    animation-name: zoom;
+    animation-duration: 0.5s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+.close {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 700px){
+    .pfpPreview img {
+        width: 100%;
+    }
 }
