--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,16 @@ code {
     monospace;
 }
 
+img {
+  max-width: 100%;
+}
+
+@media (max-width: 767px) {
+    .body {
+      font-size: 12px;
+    }
+}
+
 ::-webkit-scrollbar { width: 7px; height: 3px; border-radius: 3px;}
 ::-webkit-scrollbar-button {  background-color: #314A61; border-radius: 3px;}
 ::-webkit-scrollbar-track { }
