--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,3 +21,10 @@
     height: 150px;
     border: 3px solid darkslategrey;
 }
+
+@media (max-width: 992px) {
+    .fixedNav {
+        position: fixed;
+        z-index: 1;
+    }
+}
