--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -7,14 +7,14 @@
     border-radius: 10px;
     border-top: 0px;
     border-bottom: 0px;
-    padding: 5px;
+    padding: 5px 20px;
     font-weight: 400;
     font-size: 1.1rem;
 }
 
 .img {
-    width: 3vw;
-    height: 3vw;
+    width: 52px;
+    height: 52px;
     display: inline-block;
 }
 .img img {
@@ -27,7 +27,6 @@
 .content {
     vertical-align: top;
     display: inline-block;
-    margin-left: 1.5em;
 }
 
 .name {
@@ -44,5 +43,20 @@
 
 .deleteButton{
     text-align: right;
+}
+
+@media (max-width: 499px) {
+    .img {
+        width: 40px;
+        height: 40px;
+        display: inline-block;
+    }
+}
+
+@media (max-width: 1300px) {
+    .content {
+        margin-left: 20px;
+        font-size: 14px;
+    }
 }
 
