--- a/src/components/Profile/ProfileInfo/ProfilePicture/ProfilePicture.module.css
+++ b/src/components/Profile/ProfileInfo/ProfilePicture/ProfilePicture.module.css
@@ -1,10 +1,13 @@
+.inputFileLabel {
+    margin-bottom: 5px;
+}
 .inputFileLabel img {
     display: inline-block;
     padding: 0.1vw;
     overflow: hidden;
 }
 .inputFileLabel img:hover {
-    filter: hue-rotate(-20deg) blur(2px) brightness(57%);
+    filter: hue-rotate(-20deg) brightness(57%);
 }
 
 .photoLoader {
@@ -53,7 +56,7 @@
     transition: 0.3s ease all;
 }
 .pfp:hover {
-    filter: hue-rotate(-20deg) brightness(57%);
+    filter: hue-rotate(-20deg) brightness(58%);
 }
 
 .pfpPreview {
